# ManageYourData

./: .gitignore  Dockerfile  README.md  api.py  frontend.py  pyproject.toml  requirements.in  requirements.txt  setup.py
exports/: items-exported.xlsx  titanic-exported.xlsx
manageyourdata/: data_manager.py  main.py  metrics.py  models.py  pdf_generator.py
manageyourdata/utils/: constants.py  styles.py
src/: data_manager.py  main.py  metrics.py  pdf_generator.py
