[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manageyourdata"
version = "0.1"
description = "Tool for generating PDF reports from data files locally"
authors = [
    { name = "Marcos Hidalgo", email = "marcoshidalgob@gmail.com" }
]
dependencies = [
    "pandas",
    "scikit-learn",
    "matplotlib",
    "fpdf",
    "openpyxl",
    "streamlit",
    "fastapi[standard]",
]
[project.scripts]
manageyourdata = "manageyourdata.main:main"

[tool.setuptools]
packages = ["manageyourdata"]

[tool.setuptools.package-data]
"manageyourdata" = ["data/*", "images/*", "exports/*", "reports/*"]