[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manageyourdata"
version = "0.1"
description = "Generate PDF reports and AI powered analysis from data files locally."
authors = [
    { name = "Marcos Hidalgo", email = "marcoshidalgobanos@gmail.com" }
]
dependencies = [
    "pandas",
    "matplotlib",
    "fpdf",
    "openpyxl",
    "streamlit",
    "streamlit[pdf]",
    "fastapi[standard]",
    "langchain-ollama",
    "langchain-experimental",
    "langchain-google-genai",
    "tabulate",
]
[project.scripts]
manageyourdata = "manageyourdata.main:main"

[tool.setuptools]
packages = ["manageyourdata"]

[tool.setuptools.package-data]
"manageyourdata" = ["data/*", "images/*", "exports/*", "reports/*"]